@@ -17,8 +17,8 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 /**
  * File containing graph class for API.
  * @package API
@@ -154,7 +154,6 @@ class CGraphPrototype extends CZBXAPI {
 			$sqlParts['from']['graphs_items'] = 'graphs_items gi';
 			$sqlParts['from']['items'] = 'items i';
 			$sqlParts['from']['hosts_groups'] = 'hosts_groups hg';
-
 			$sqlParts['where'][] = DBcondition('hg.groupid', $options['groupids']);
 			$sqlParts['where'][] = 'hg.hostid=i.hostid';
 			$sqlParts['where']['gig'] = 'gi.graphid=g.graphid';
@@ -720,7 +719,9 @@ class CGraphPrototype extends CZBXAPI {
 			$this->updateReal($graph);
 
 			// inheritance
-			if ($templatedGraph) $this->inherit($graph);
+			if ($templatedGraph) {
+				$this->inherit($graph);
+			}
 		}
 
 		return array('graphids' => $graphids);
@@ -1068,6 +1069,13 @@ class CGraphPrototype extends CZBXAPI {
 					self::exception(ZBX_API_ERROR_PARAMETERS, _s('Cannot add more than one item with type "Graph sum" on graph "%1$s".', $graph['name']));
 				}
 			}
+
+			// Y axis MIN value < Y axis MAX value
+			if (($graph['graphtype'] == GRAPH_TYPE_NORMAL || $graph['graphtype'] == GRAPH_TYPE_STACKED)
+					&& $graph['ymin_type'] == GRAPH_YAXIS_TYPE_FIXED
+					&& $graph['yaxismin'] >= $graph['yaxismax']) {
+				self::exception(ZBX_API_ERROR_PARAMETERS, _('Y axis MAX value must be greater than Y axis MIN value.'));
+			}
 		}
 
 		if (!empty($itemids)) {
@@ -1157,4 +1165,3 @@ class CGraphPrototype extends CZBXAPI {
 		return true;
 	}
 }
-?>
